--- a/index.ipynb
+++ b/index.ipynb
@@ -3233,7 +3233,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    for num in range(steps):\n",
     "        current_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
-    "        current_rss = residual_sum_squares(x_values, y_values)\n",
+    "        current_rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "        \n",
     "        \n",
     "    pass"
