--- a/index.ipynb
+++ b/index.ipynb
@@ -3236,7 +3236,7 @@
     "        current_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
     "        current_rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "        costcurve.append({'m':current_slope, 'rss': current_rss, 'slope': current_m})\n",
-    "        \n",
+    "        current_m = \n",
     "        \n",
     "        \n",
     "    pass"
