--- a/index.ipynb
+++ b/index.ipynb
@@ -3237,6 +3237,7 @@
     "        current_rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "        costcurve.append({'m':current_slope, 'rss': current_rss, 'slope': current_m})\n",
     "        current_m = updated_m(current_m, learning_rate, current_slope)\n",
+    "        return cost\n",
     "        \n",
     "        \n",
     "    pass"
