--- a/index.ipynb
+++ b/index.ipynb
@@ -3236,7 +3236,7 @@
     "        current_cost_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
     "        current_rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "        costcurve.append({'m':current_m, 'rss': current_rss, 'slope': current_cost_slope})\n",
-    "        current_m = updated_m(current_m, learning_rate, current_slope)\n",
+    "        current_m = updated_m(current_m, learning_rate, current_cost_slope)\n",
     "        return costcurve\n",
     "        \n",
     "        \n",
